fixed padding about page on mobile

--- a/about.css
+++ b/about.css
@@ -94,6 +94,8 @@
 
 @media screen and (max-width: 768px) {
 	.container {
+		padding-left: 10px;
+		padding-right: 10px;
 		margin-top: 100px;
 	}
 
